#self-hosted-runner endid

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,3 +16,8 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Notify via Endid
+        uses: endid-app/endid-github-action@master
+        with:
+          token: ${{ secrets.endid_token }}
+          status: ${{ job.status }}
