#self-hosted-runner endid

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,12 +16,12 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      # - name: Notify via Endid
-      #   uses: endid-app/endid-github-action@master
-      #   with:
-      #     token: ${{ secrets.endid_token }}
-      #     status: ${{ job.status }}
-      - name: Slack Notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      - name: Notify via Endid
+        uses: endid-app/endid-github-action@master
+        with:
+          token: ${{ secrets.endid_token }}
+          status: ${{ job.status }}
+      # - name: Slack Notification
+      #   uses: rtCamp/action-slack-notify@v2
+      #   env:
+      #     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
